test/Fixtures/InvalidSuites/StaticMethods.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites;

<<TestSuite>>
class StaticMethods
{
    <<Setup>>
    public static function setItUp() : void
    {
    }
}
